--- a/assets/stylesheets/indiabazaar_custom.css
+++ b/assets/stylesheets/indiabazaar_custom.css
@@ -14,4 +14,7 @@
 	bottom-aligned-row-modified{
 		margin-top: 30px !important
 	}
+	#hd .header-menu .navbar .navbar-nav>li:hover{
+		background-color: #f7f5ee;
+	}
 }
